8/7: - tính năng kiểm tra danh sách từng lớp - lấy được thông tin từng học

--- a/app/src/main/res/layout/dialog_edit_time_table.xml
+++ b/app/src/main/res/layout/dialog_edit_time_table.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:hint="định dạng Monday->"
+            android:hint="định dạng Monday->Mon"
             android:textColor="@color/colorBlack"
             android:textSize="@dimen/d_16">
 
