--- a/app/src/main/res/layout/item_m007_list_hs.xml
+++ b/app/src/main/res/layout/item_m007_list_hs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="180dp"
     android:orientation="vertical"
     android:background="@color/colorGreen"
     android:weightSum="3">
@@ -13,18 +13,19 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/d_10"
         android:layout_weight="3"
+        android:weightSum="3"
         android:background="@color/colorBlack"
         android:orientation="vertical"
         android:padding="0.1dp">
 
         <TextView
-            android:id="@+id/tv_name_class_m004"
-            android:layout_width="0dp"
+            android:id="@+id/tv_name_hs_007"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/colorWhite"
             android:gravity="center"
-            android:text="Techja k1"
+            android:text="Ngô Mạnh "
             android:textStyle="bold"
             android:textColor="@color/colorBlack"
             android:textSize="@dimen/d_20" />
@@ -37,13 +38,30 @@
         <TextView
 
             android:textStyle="bold"
-            android:id="@+id/tv_class_code_m004"
+            android:id="@+id/tv_class_name_007"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/colorWhite"
             android:gravity="center"
-            android:text="TDNDZ123"
+            android:text="techja k2"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/d_20" />
+
+        <View
+            android:layout_width="0.1dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorBlack" />
+        <TextView
+
+            android:textStyle="bold"
+            android:id="@+id/tv_email_007"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorWhite"
+            android:gravity="center"
+            android:text="mail"
             android:textColor="@color/colorBlack"
             android:textSize="@dimen/d_20" />
 
@@ -60,17 +78,17 @@
         android:layout_marginBottom="@dimen/d_20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       >
+        >
 
         <Button
             android:layout_marginRight="@dimen/d_16"
-            android:id="@+id/bt_timetable_dialog"
+            android:id="@+id/bt_list_006"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/d_10"
             android:layout_weight="1"
             android:background="@drawable/bg_bt_timetable"
-            android:text="timeTable"
+            android:text="lịch sử điểm danh"
             android:textColor="@color/colorWhiteAlpha"
             android:textSize="@dimen/d_20"
             android:textStyle="bold" />
