--- a/app/src/main/res/drawable/bg_bt_dialog_info.xml
+++ b/app/src/main/res/drawable/bg_bt_dialog_info.xml
@@ -3,6 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorBlack"></solid>
+            <corners android:radius="@dimen/d_10"/>
         </shape>
     </item>
     <item
@@ -12,6 +13,7 @@
         android:top="0.1dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorRed"></solid>
+            <corners android:radius="@dimen/d_10"/>
         </shape>
     </item>
 
