--- a/app/src/main/res/drawable/bg_bt_timetable.xml
+++ b/app/src/main/res/drawable/bg_bt_timetable.xml
@@ -3,6 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorBlack"></solid>
+            <corners android:radius="@dimen/d_10"/>
         </shape>
     </item>
     <item
@@ -11,7 +12,8 @@
         android:right="0.1dp"
         android:top="0.1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorGreen"></solid>
+            <solid android:color="@color/colorDarkGray"></solid>
+            <corners android:radius="@dimen/d_10"/>
         </shape>
     </item>
 
