--- a/app/src/main/res/layout/dialog_more_class.xml
+++ b/app/src/main/res/layout/dialog_more_class.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@color/colorGreenAlpha"
+    android:background="@color/colorGreen"
     android:orientation="vertical"
     android:padding="@dimen/d_16">
 
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:text="More Class"
         android:textColor="@color/colorBlack"
-        android:textSize="@dimen/d_30" />
+        android:textSize="@dimen/d_30"
+        android:textStyle="bold" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -28,11 +29,15 @@
             android:gravity="center"
             android:hint="ClassName"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25">
+            android:textSize="@dimen/d_15">
 
             <requestFocus />
         </EditText>
     </TableRow>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -46,11 +51,15 @@
             android:gravity="center"
             android:hint="ClassCode"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25">
+            android:textSize="@dimen/d_15">
 
             <requestFocus />
         </EditText>
     </TableRow>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -65,11 +74,15 @@
             android:gravity="center"
             android:hint="coach"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25">
+            android:textSize="@dimen/d_15">
 
             <requestFocus />
         </EditText>
     </TableRow>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -83,11 +96,15 @@
             android:gravity="center"
             android:hint="description"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25">
+            android:textSize="@dimen/d_15">
 
             <requestFocus />
         </EditText>
     </TableRow>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -102,11 +119,15 @@
             android:gravity="center"
             android:hint="duration"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25">
+            android:textSize="@dimen/d_15">
 
             <requestFocus />
         </EditText>
     </TableRow>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -120,11 +141,15 @@
             android:gravity="center"
             android:hint="modul"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25">
+            android:textSize="@dimen/d_15">
 
             <requestFocus />
         </EditText>
     </TableRow>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -139,7 +164,7 @@
             android:gravity="center"
             android:hint="supporter"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_25">
+            android:textSize="@dimen/d_15">
 
             <requestFocus />
         </EditText>
