--- a/app/src/main/res/layout/item_m006_list_class.xml
+++ b/app/src/main/res/layout/item_m006_list_class.xml
@@ -18,7 +18,7 @@
         android:padding="0.1dp">
 
         <TextView
-            android:id="@+id/tv_name_class_m004"
+            android:id="@+id/tv_name_class_m006"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -37,7 +37,7 @@
         <TextView
 
             android:textStyle="bold"
-            android:id="@+id/tv_class_code_m004"
+            android:id="@+id/tv_class_code_m006"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -60,17 +60,17 @@
         android:layout_marginBottom="@dimen/d_20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       >
+        >
 
         <Button
             android:layout_marginRight="@dimen/d_16"
-            android:id="@+id/bt_timetable_dialog"
+            android:id="@+id/bt_list_006"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/d_10"
             android:layout_weight="1"
             android:background="@drawable/bg_bt_timetable"
-            android:text="timeTable"
+            android:text="Danh sách lớp"
             android:textColor="@color/colorWhiteAlpha"
             android:textSize="@dimen/d_20"
             android:textStyle="bold" />
