--- a/app/src/main/res/layout/m005_timetable_class.xml
+++ b/app/src/main/res/layout/m005_timetable_class.xml
@@ -31,6 +31,18 @@
             android:layout_gravity="center_horizontal"
             android:text="the best android training organization " />
 
+        <TextView
+            android:id="@+id/tv_class_name_005"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/d_16"
+            android:layout_marginTop="@dimen/d_20"
+            android:text="class name"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/d_20"
+            android:textStyle="bold" />
+
 
         <TableRow
             android:layout_width="match_parent"
@@ -45,7 +57,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorLightGreen"
+                android:background="@color/colorGreen"
                 android:gravity="center"
                 android:text="Day"
                 android:textColor="@color/colorBlack"
@@ -60,7 +72,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorLightGreen"
+                android:background="@color/colorGreen"
                 android:gravity="center"
                 android:text="hours"
                 android:textColor="@color/colorBlack"
@@ -75,7 +87,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorLightGreen"
+                android:background="@color/colorGreen"
                 android:gravity="center"
                 android:text="detail"
                 android:textColor="@color/colorBlack"
@@ -90,7 +102,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorLightGreen"
+                android:background="@color/colorGreen"
                 android:gravity="center"
                 android:text="coach"
                 android:textColor="@color/colorBlack"
@@ -105,7 +117,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorLightGreen"
+                android:background="@color/colorGreen"
                 android:gravity="center"
                 android:text="Note"
                 android:textColor="@color/colorBlack"
