--- a/app/src/main/res/layout/item_class.xml
+++ b/app/src/main/res/layout/item_class.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="200dp"
     android:orientation="vertical"
     android:background="@color/colorGreen"
-    android:weightSum="3">
+    android:weightSum="3"
+    >
 
 
     <TableRow
