--- a/app/src/main/res/layout/m001_frg_login.xml
+++ b/app/src/main/res/layout/m001_frg_login.xml
@@ -91,6 +91,25 @@
 
             <TableRow
                 android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="@dimen/d_16"
+                android:background="@drawable/bg_edt">
+
+                <EditText
+                    android:id="@+id/edt_code_admin"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="code admin"
+                    android:maxLength="50"
+                    android:paddingHorizontal="@dimen/d_10"
+                    android:singleLine="true">
+
+                    <requestFocus />
+                </EditText>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/d_16"
                 android:layout_marginTop="@dimen/d_16">
