--- a/app/src/main/res/layout/m003_frg_menu.xml
+++ b/app/src/main/res/layout/m003_frg_menu.xml
@@ -136,7 +136,7 @@
             android:layout_weight="3">
 
             <LinearLayout
-                android:id="@+id/ln_lich_hoc"
+                android:id="@+id/ln_attendance"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
