--- a/app/src/main/res/layout/m004_frg_class.xml
+++ b/app/src/main/res/layout/m004_frg_class.xml
@@ -6,13 +6,27 @@
     android:background="@color/colorWhite"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/d_10"
+        android:src="@drawable/logo" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:text="the best android training organization " />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
         android:layout_marginTop="@dimen/d_16"
-        android:background="@color/colorGreen"
-        android:gravity="center"
+        android:layout_marginLeft="@dimen/d_16"
+        android:gravity="left"
         android:text="Danh sách lớp"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/d_30"
@@ -21,7 +35,7 @@
     <LinearLayout
         android:layout_marginTop="@dimen/d_20"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="@dimen/d_50"
         android:layout_marginLeft="@dimen/d_16"
         android:layout_marginRight="@dimen/d_16"
         android:orientation="horizontal"
