--- a/app/src/main/res/layout/m006_frg_history.xml
+++ b/app/src/main/res/layout/m006_frg_history.xml
@@ -7,12 +7,26 @@
     android:orientation="vertical">
     <include layout="@layout/actionbar_m006"/>
 
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/d_10"
+        android:src="@drawable/logo" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:text="the best android training organization " />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginLeft="@dimen/d_16"
         android:layout_marginTop="@dimen/d_16"
-        android:background="@color/colorGreen"
         android:gravity="center"
         android:text="Danh sách lớp"
         android:textColor="@color/colorBlack"
@@ -21,7 +35,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="@dimen/d_50"
         android:layout_marginLeft="@dimen/d_16"
         android:layout_marginTop="@dimen/d_20"
         android:layout_marginRight="@dimen/d_16"
