--- a/app/src/main/res/layout/m007_frg_list_tudent.xml
+++ b/app/src/main/res/layout/m007_frg_list_tudent.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/d_16"
         android:layout_marginRight="@dimen/d_16"
-        android:weightSum="3">
+        android:weightSum="4">
 
         <TextView
             android:layout_width="0dp"
@@ -35,7 +35,7 @@
             android:gravity="center"
             android:text="Tên"
             android:textColor="@color/colorWhiteAlpha"
-            android:textSize="@dimen/d_30" />
+            android:textSize="@dimen/d_20" />
 
         <TextView
             android:layout_width="0dp"
@@ -45,7 +45,7 @@
             android:gravity="center"
             android:text="Lớp"
             android:textColor="@color/colorWhiteAlpha"
-            android:textSize="@dimen/d_30" />
+            android:textSize="@dimen/d_20" />
 
         <TextView
             android:layout_width="0dp"
@@ -55,7 +55,16 @@
             android:gravity="center"
             android:text="Mail"
             android:textColor="@color/colorWhiteAlpha"
-            android:textSize="@dimen/d_30" />
+            android:textSize="@dimen/d_20" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_tv_class"
+            android:gravity="center"
+            android:text="Phone"
+            android:textColor="@color/colorWhiteAlpha"
+            android:textSize="@dimen/d_20" />
 
     </TableRow>
 
