--- a/app/src/main/res/layout/m005_timetable_class.xml
+++ b/app/src/main/res/layout/m005_timetable_class.xml
@@ -9,6 +9,11 @@
         android:layout_height="100dp"
         android:layout_centerInParent="true"
         android:visibility="gone" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -153,4 +158,5 @@
             android:text="Edit table" />
 
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
