--- a/app/src/main/res/layout/m004_frg_class.xml
+++ b/app/src/main/res/layout/m004_frg_class.xml
@@ -1,102 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
     android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="180dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/d_10"
-        android:src="@drawable/logo" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="the best android training organization " />
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginTop="@dimen/d_16"
-        android:layout_marginLeft="@dimen/d_16"
-        android:gravity="left"
-        android:text="Danh sách lớp"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/d_30"
-        android:textStyle="bold" />
+    <ProgressBar
+        android:backgroundTint="@color/colorblue"
+        android:id="@+id/progress_bar_004"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="visible" />
 
     <LinearLayout
-        android:layout_marginTop="@dimen/d_20"
+        android:id="@+id/ln_m004_frg"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/d_50"
-        android:layout_marginLeft="@dimen/d_16"
-        android:layout_marginRight="@dimen/d_16"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/d_10"
+            android:src="@drawable/logo" />
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/bg_tv_class"
-            android:gravity="center"
-            android:text="CLASSNAME"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/d_20"
-            android:textStyle="bold" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="the best android training organization " />
+
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/bg_tv_class"
-            android:gravity="center"
-            android:text="CLASSCODE"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/d_20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/d_16"
+            android:layout_marginTop="@dimen/d_16"
+            android:gravity="left"
+            android:text="Danh sách lớp"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/d_30"
             android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/d_50"
+            android:layout_marginLeft="@dimen/d_16"
+            android:layout_marginTop="@dimen/d_20"
+            android:layout_marginRight="@dimen/d_16"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_tv_class"
+                android:gravity="center"
+                android:text="CLASSNAME"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/d_20"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_tv_class"
+                android:gravity="center"
+                android:text="CLASSCODE"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/d_20"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/d_16"
+            android:layout_marginRight="@dimen/d_16"
+            android:layout_marginBottom="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_class"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    tools:listitem="@layout/item_class" />
+
+                <Button
+                    android:id="@+id/bt_more_m004"
+                    android:layout_width="100dp"
+                    android:layout_height="@dimen/d_50"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="@dimen/d_10"
+                    android:background="@drawable/bg_edit_bt"
+                    android:text="More"
+                    android:textColor="@color/colorBlack" />
+
+            </LinearLayout>
+
+
+        </ScrollView>
 
 
     </LinearLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/d_16"
-        android:layout_marginRight="@dimen/d_16"
-        android:layout_marginBottom="16dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_class"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                tools:listitem="@layout/item_class" />
-
-            <Button
-                android:id="@+id/bt_more_m004"
-                android:layout_width="100dp"
-                android:layout_height="@dimen/d_50"
-                android:layout_gravity="right"
-                android:layout_marginTop="@dimen/d_10"
-                android:background="@drawable/bg_edit_bt"
-                android:text="More"
-                android:textColor="@color/colorBlack" />
-        </LinearLayout>
-
-    </ScrollView>
-
-
-</LinearLayout>
+</RelativeLayout>
