--- a/app/src/main/res/layout/m006_frg_history.xml
+++ b/app/src/main/res/layout/m006_frg_history.xml
@@ -1,94 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
     android:orientation="vertical">
-    <include layout="@layout/actionbar_m006"/>
-
-    <ImageView
-        android:layout_width="180dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/d_10"
-        android:src="@drawable/logo" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="the best android training organization " />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="@dimen/d_16"
-        android:layout_marginTop="@dimen/d_16"
-        android:gravity="center"
-        android:text="Danh sách lớp"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/d_30"
-        android:textStyle="bold" />
+    <ProgressBar
+        android:id="@+id/progress_bar_006"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="visible" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/d_50"
-        android:layout_marginLeft="@dimen/d_16"
-        android:layout_marginTop="@dimen/d_20"
-        android:layout_marginRight="@dimen/d_16"
-        android:orientation="horizontal"
-        android:weightSum="2">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/bg_tv_class"
-            android:gravity="center"
-            android:text="CLASSNAME"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/d_20"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/bg_tv_class"
-            android:gravity="center"
-            android:text="CLASSCODE"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/d_20"
-            android:textStyle="bold" />
-
-
-    </LinearLayout>
-
-    <ScrollView
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/ln_frg_006"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/d_16"
-        android:layout_marginRight="@dimen/d_16"
-        android:layout_marginBottom="16dp">
+        android:background="@color/colorWhite"
+        android:orientation="vertical">
+
+        <include layout="@layout/actionbar_m006" />
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/d_10"
+            android:src="@drawable/logo" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="the best android training organization " />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/d_16"
+            android:layout_marginTop="@dimen/d_16"
+            android:gravity="center"
+            android:text="Danh sách lớp"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/d_30"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="@dimen/d_50"
+            android:layout_marginLeft="@dimen/d_16"
+            android:layout_marginTop="@dimen/d_20"
+            android:layout_marginRight="@dimen/d_16"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_class_006"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                tools:listitem="@layout/item_m006_list_class" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_tv_class"
+                android:gravity="center"
+                android:text="CLASSNAME"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/d_20"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_tv_class"
+                android:gravity="center"
+                android:text="CLASSCODE"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/d_20"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
 
-    </ScrollView>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/d_16"
+            android:layout_marginRight="@dimen/d_16"
+            android:layout_marginBottom="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_class_006"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    tools:listitem="@layout/item_m006_list_class" />
+
+            </LinearLayout>
+
+        </ScrollView>
 
 
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
