--- a/app/src/main/res/layout/m007_frg_list_tudent.xml
+++ b/app/src/main/res/layout/m007_frg_list_tudent.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <ProgressBar
+        android:id="@+id/progress_bar_007"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="visible" />
+
+<LinearLayout
+
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ln_frg_007"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
@@ -94,3 +109,4 @@
 
 
 </LinearLayout>
+</RelativeLayout>
