--- a/app/src/main/res/layout/m008_frg_attendance_student.xml
+++ b/app/src/main/res/layout/m008_frg_attendance_student.xml
@@ -6,13 +6,14 @@
 
     <ProgressBar
         android:visibility="gone"
-        android:id="@+id/progress_load_data"
+        android:id="@+id/progress_008"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:id="@+id/ln_frg_008"
         android:layout_height="match_parent"
         android:background="@color/colorWhite"
         android:orientation="vertical"
