--- a/app/src/main/res/drawable/bg_bt_timetable.xml
+++ b/app/src/main/res/drawable/bg_bt_timetable.xml
@@ -12,7 +12,7 @@
         android:right="0.1dp"
         android:top="0.1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorDarkGray"></solid>
+            <solid android:color="@color/colortvLogo"></solid>
             <corners android:radius="@dimen/d_10"/>
         </shape>
     </item>
