--- a/app/src/main/res/drawable/bg_edit_bt.xml
+++ b/app/src/main/res/drawable/bg_edit_bt.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/d_10"/>
-<solid android:color="@color/colorGreen"/>
+<solid android:color="@color/colortvLogo"/>
 </shape>
