--- a/app/src/main/res/drawable/bg_tv_class.xml
+++ b/app/src/main/res/drawable/bg_tv_class.xml
@@ -11,7 +11,7 @@
         android:right="1dp"
         android:top="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorDarkGray" />
+            <solid android:color="@color/colortvLogo" />
         </shape>
     </item>
 </layer-list>
