--- a/app/src/main/res/layout/m000_frg_splash.xml
+++ b/app/src/main/res/layout/m000_frg_splash.xml
@@ -3,25 +3,18 @@
     android:layout_width="match_parent"
     android:background="@color/colorWhiteAlpha"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
+
+
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="121dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="250dp"
-        android:src="@drawable/ic_android_white" />
 
-    <ImageView
-        android:layout_width="180dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="250dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:src="@drawable/logo" />
+        android:src="@drawable/ic_logo_company" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="the best android training organization " />
+
 </LinearLayout>
