--- a/app/src/main/res/layout/m001_frg_login.xml
+++ b/app/src/main/res/layout/m001_frg_login.xml
@@ -4,8 +4,6 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhiteAlpha">
 
-    <include layout="@layout/m001_actionbar" />
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,19 +15,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="250dp"
-                android:layout_height="90dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/d_10"
-                android:src="@drawable/ic_android" />
 
             <ImageView
-                android:layout_width="180dp"
-                android:layout_height="60dp"
+                android:layout_width="250dp"
+                android:layout_height="120dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/d_10"
-                android:src="@drawable/gray_logo" />
+                android:src="@drawable/ic_logo_company" />
 
             <TextView
                 android:layout_width="wrap_content"
