--- a/app/src/main/res/layout/m003_frg_menu.xml
+++ b/app/src/main/res/layout/m003_frg_menu.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:background="@color/colorGreen"
+            android:background="@color/colorWhite"
             android:elevation="20dp"
             android:orientation="horizontal"
             android:weightSum="4">
@@ -37,28 +37,13 @@
                     android:layout_width="0dp"
                     android:layout_height="20dp" />
 
-                <TextView
-                    android:id="@+id/tv_name"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_gravity="left"
-                    android:layout_marginTop="@dimen/d_16"
                     android:layout_weight="1"
-                    android:fontFamily="sans-serif"
                     android:gravity="center_vertical"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="25dp" />
-
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|left"
-                    android:layout_marginBottom="20dp"
-                    android:fontFamily="sans-serif"
-                    android:singleLine="true"
-                    android:textSize="18dp" />
+                    android:src="@drawable/ic_logo_company" />
 
 
             </LinearLayout>
@@ -71,7 +56,7 @@
                 android:layout_weight="1"
                 android:padding="@dimen/d_16"
                 android:src="@drawable/ic_power"
-                android:tint="@color/colorWhiteAlpha" />
+                android:tint="@color/colortvLogo" />
         </TableRow>
 
         <TableRow
@@ -92,12 +77,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="5"
-                    android:src="@drawable/ic_diem_danh" />
+                    android:src="@drawable/ic_baseline_account"
+                    android:tint="@color/colortvLogo" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:fontFamily="sans-serif"
                     android:text="class"
                     android:textColor="@color/colorBlack"
                     android:textSize="20dp" />
@@ -116,12 +103,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="5"
-                    android:src="@drawable/ic_history" />
+                    android:src="@drawable/ic_baseline_access_time"
+                    android:tint="@color/colortvLogo" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:fontFamily="sans-serif"
                     android:text="History"
                     android:textColor="@color/colorBlack"
                     android:textSize="20dp" />
@@ -141,46 +130,23 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/bg_item"
-
                 android:orientation="vertical"
                 android:padding="@dimen/d40">
 
                 <ImageView
-
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="5"
-                    android:src="@drawable/ic_qrcode" />
+                    android:src="@drawable/qr_code"
+                    android:tint="@color/colortvLogo" />
 
                 <TextView
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:fontFamily="sans-serif"
                     android:text="Attendance"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ln_noi_quy"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/bg_item"
-                android:orientation="vertical"
-                android:padding="@dimen/d40">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="5"
-                    android:src="@drawable/ic_rule" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Nội quy"
                     android:textColor="@color/colorBlack"
                     android:textSize="20dp" />
             </LinearLayout>
