--- a/app/src/main/res/layout/m005_timetable_class.xml
+++ b/app/src/main/res/layout/m005_timetable_class.xml
@@ -23,17 +23,11 @@
 
 
         <ImageView
-            android:layout_width="180dp"
-            android:layout_height="60dp"
+            android:layout_width="250dp"
+            android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/d_10"
-            android:src="@drawable/logo" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="the best android training organization " />
+            android:src="@drawable/ic_logo_company" />
 
         <TextView
             android:id="@+id/tv_class_name_005"
@@ -61,7 +55,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="Day"
                 android:textColor="@color/colorBlack"
@@ -76,7 +70,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="hours"
                 android:textColor="@color/colorBlack"
@@ -91,7 +85,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="detail"
                 android:textColor="@color/colorBlack"
@@ -106,7 +100,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="coach"
                 android:textColor="@color/colorBlack"
@@ -121,7 +115,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="Note"
                 android:textColor="@color/colorBlack"
