--- a/app/src/main/res/layout/m008_frg_attendance_student.xml
+++ b/app/src/main/res/layout/m008_frg_attendance_student.xml
@@ -21,17 +21,12 @@
 
 
         <ImageView
-            android:layout_width="180dp"
-            android:layout_height="60dp"
+            android:layout_width="250dp"
+            android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/d_10"
-            android:src="@drawable/logo" />
+            android:src="@drawable/ic_logo_company" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="the best android training organization " />
 
 
         <TableRow
@@ -48,7 +43,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="Day"
                 android:textColor="@color/colorBlack"
@@ -64,7 +59,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="Hours"
                 android:textColor="@color/colorBlack"
@@ -81,7 +76,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/colorGreen"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="State"
                 android:textColor="@color/colorBlack"
