--- a/app/src/main/res/layout/dialog_more_class.xml
+++ b/app/src/main/res/layout/dialog_more_class.xml
@@ -3,7 +3,7 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@color/colorGreen"
+    android:background="@color/colortvLogo1"
     android:orientation="vertical"
     android:padding="@dimen/d_16">
 
