--- a/app/src/main/res/layout/item_m006_list_class.xml
+++ b/app/src/main/res/layout/item_m006_list_class.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:background="@color/colorWhite"
     android:orientation="vertical"
-    android:background="@color/colortvLogo1"
     android:weightSum="3">
 
 
@@ -17,62 +17,94 @@
         android:orientation="vertical"
         android:padding="0.1dp">
 
-        <TextView
-            android:id="@+id/tv_name_class_m006"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorWhite"
-            android:gravity="center"
-            android:text="Techja k1"
-            android:textStyle="bold"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_20" />
+            android:orientation="horizontal">
+
+
+            <ImageView
+                android:layout_width="@dimen/d_50"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhite"
+                android:padding="@dimen/d_10"
+                android:src="@drawable/ic_baseline_android"
+                android:tint="@color/colorGreen" />
+
+            <TextView
+                android:id="@+id/tv_name_class_m006"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorWhite"
+                android:gravity="center"
+                android:text="Techja k1"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_20"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <View
             android:layout_width="0.1dp"
             android:layout_height="match_parent"
             android:background="@color/colorBlack" />
 
-        <TextView
-
-            android:textStyle="bold"
-            android:id="@+id/tv_class_code_m006"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorWhite"
-            android:gravity="center"
-            android:text="TDNDZ123"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_20" />
-
-        <View
-            android:layout_width="0.1dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorBlack" />
+            android:orientation="horizontal">
 
 
+            <ImageView
+                android:layout_width="@dimen/d_50"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhite"
+                android:padding="@dimen/d_10"
+                android:src="@drawable/ic_baseline_emoji_emotions"
+                android:tint="@color/colorGreen" />
+
+            <TextView
+
+                android:id="@+id/tv_class_code_m006"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorWhite"
+                android:gravity="center"
+                android:text="TDNDZ123"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_20"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="0.1dp"
+                android:layout_height="match_parent"
+                android:background="@color/colorBlack" />
+
+        </LinearLayout>
     </TableRow>
 
     <TableRow
-        android:layout_marginTop="@dimen/d_20"
-        android:layout_marginBottom="@dimen/d_20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:layout_marginTop="@dimen/d_10"
+        android:weightSum="3"
+        android:gravity="center"
+        android:layout_marginBottom="@dimen/d_20">
 
         <Button
-            android:layout_marginRight="@dimen/d_16"
             android:id="@+id/bt_list_006"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/d_10"
+            android:layout_marginRight="@dimen/d_16"
             android:layout_weight="1"
             android:background="@drawable/bg_bt_timetable"
             android:text="Danh sách lớp"
             android:textColor="@color/colorWhiteAlpha"
-            android:textSize="@dimen/d_20"
+            android:textSize="@dimen/d_15"
             android:textStyle="bold" />
 
 
