--- a/app/src/main/res/layout/m003_frg_menu.xml
+++ b/app/src/main/res/layout/m003_frg_menu.xml
@@ -14,7 +14,7 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:background="@color/colorWhite"
-            android:elevation="20dp"
+            android:elevation="2dp"
             android:orientation="horizontal"
             android:weightSum="4">
 
@@ -74,9 +74,10 @@
                 android:padding="@dimen/d40">
 
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:layout_width="80dp"
                     android:layout_height="0dp"
-                    android:layout_weight="5"
+                    android:layout_weight="2"
+                    android:layout_gravity="center"
                     android:src="@drawable/ic_baseline_account"
                     android:tint="@color/colortvLogo" />
 
@@ -100,7 +101,8 @@
                 android:padding="@dimen/d40">
 
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:layout_width="80dp"
+                    android:layout_gravity="center"
                     android:layout_height="0dp"
                     android:layout_weight="5"
                     android:src="@drawable/ic_baseline_access_time"
@@ -134,7 +136,8 @@
                 android:padding="@dimen/d40">
 
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:layout_width="80dp"
+                    android:layout_gravity="center"
                     android:layout_height="0dp"
                     android:layout_weight="5"
                     android:src="@drawable/qr_code"
