--- a/app/src/main/res/layout/m004_frg_class.xml
+++ b/app/src/main/res/layout/m004_frg_class.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <ProgressBar
-        android:backgroundTint="@color/colorblue"
         android:id="@+id/progress_bar_004"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_centerInParent="true"
+        android:backgroundTint="@color/colorblue"
         android:visibility="visible" />
 
     <LinearLayout
@@ -21,11 +22,11 @@
 
 
         <ImageView
-            android:layout_width="180dp"
+            android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/d_10"
-            android:src="@drawable/logo" />
+            android:src="@drawable/ic_logo_company" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,18 +34,30 @@
             android:layout_gravity="center_horizontal"
             android:text="the best android training organization " />
 
-
-        <TextView
-            android:layout_width="wrap_content"
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="@dimen/d_16"
-            android:layout_marginTop="@dimen/d_16"
-            android:gravity="left"
-            android:text="Danh sách lớp"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_30"
-            android:textStyle="bold" />
+            android:layout_marginTop="@dimen/d_10">
+
+            <ImageView
+                android:layout_width="@dimen/d_50"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/d_16"
+                android:src="@drawable/ic_class" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:gravity="left"
+                android:paddingLeft="@dimen/d_16"
+                android:text="Danh sách lớp"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_30"
+                android:textStyle="bold" />
+
+
+        </TableRow>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,26 +68,42 @@
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <TextView
-                android:layout_width="0dp"
+            <ImageView
+                android:layout_width="@dimen/d_50"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:background="@drawable/bg_tv_class"
-                android:gravity="center"
-                android:text="CLASSNAME"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/d_20"
-                android:textStyle="bold" />
+                android:padding="@dimen/d_10"
+                android:src="@drawable/ic_class_name"
+                android:tint="@color/colorWhite" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@color/colortvLogo"
+                android:gravity="center"
+                android:text="CLASSNAME"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/d_15"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="@dimen/d_50"
+                android:layout_height="match_parent"
                 android:background="@drawable/bg_tv_class"
+                android:padding="@dimen/d_10"
+                android:src="@drawable/ic_sharp_code"
+                android:tint="@color/colorWhite" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colortvLogo"
                 android:gravity="center"
                 android:text="CLASSCODE"
                 android:textColor="@color/colorWhite"
-                android:textSize="@dimen/d_20"
+                android:textSize="@dimen/d_15"
                 android:textStyle="bold" />
 
 
@@ -107,7 +136,7 @@
                     android:layout_marginTop="@dimen/d_10"
                     android:background="@drawable/bg_edit_bt"
                     android:text="More"
-                    android:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorWhite" />
 
             </LinearLayout>
 
