--- a/app/src/main/res/layout/m005_timetable_class.xml
+++ b/app/src/main/res/layout/m005_timetable_class.xml
@@ -9,147 +9,156 @@
         android:layout_height="100dp"
         android:layout_centerInParent="true"
         android:visibility="gone" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/ln_m005_frg"
-        android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/ln_m005_frg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorWhite"
+            android:orientation="vertical"
+            android:weightSum="5">
+
+
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/d_10"
+                android:src="@drawable/ic_logo_company" />
+<TableRow android:layout_width="match_parent"
+    android:layout_height="@dimen/d_50"
+    >
+    <ImageView android:layout_width="@dimen/d_50"
         android:layout_height="match_parent"
-        android:background="@color/colorWhite"
-        android:orientation="vertical"
-        android:weightSum="5">
-
-
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/d_10"
-            android:src="@drawable/ic_logo_company" />
-
-        <TextView
-            android:id="@+id/tv_class_name_005"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="@dimen/d_16"
-            android:layout_marginTop="@dimen/d_20"
-            android:text="class name"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_20"
-            android:textStyle="bold" />
-
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d_50"
-            android:layout_marginHorizontal="@dimen/d_16"
-            android:layout_marginTop="@dimen/d_20"
-            android:background="@color/colorBlack"
-            android:padding="1dp">
+        android:src="@drawable/ic_class"
+        android:layout_marginLeft="@dimen/d_16"
+        android:padding="5dp"/>
 
             <TextView
-
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/colortvLogo"
-                android:gravity="center"
-                android:text="Day"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_25" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/colorBlack" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/colortvLogo"
-                android:gravity="center"
-                android:text="hours"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_20" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/colorBlack" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/colortvLogo"
-                android:gravity="center"
-                android:text="detail"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_20" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/colorBlack" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/colortvLogo"
-                android:gravity="center"
-                android:text="coach"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_20" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/colorBlack" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/colortvLogo"
-                android:gravity="center"
-                android:text="Note"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_20" />
-
-        </TableRow>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:id="@+id/ln_time_table"
-                android:layout_width="match_parent"
+                android:id="@+id/tv_class_name_005"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/d_16"
+                android:text="class name"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_20"
+                android:textStyle="bold" />
+
+</TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d_50"
                 android:layout_marginHorizontal="@dimen/d_16"
-                android:orientation="vertical">
+                android:layout_marginTop="@dimen/d_20"
+                android:background="@color/colorBlack"
+                android:padding="1dp">
 
-                <include layout="@layout/item_day" />
+                <TextView
+
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colortvLogo"
+                    android:gravity="center"
+                    android:text="Day"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/d_25" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorBlack" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colortvLogo"
+                    android:gravity="center"
+                    android:text="hours"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/d_20" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorBlack" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colortvLogo"
+                    android:gravity="center"
+                    android:text="detail"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/d_20" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorBlack" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colortvLogo"
+                    android:gravity="center"
+                    android:text="coach"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/d_20" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorBlack" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colortvLogo"
+                    android:gravity="center"
+                    android:text="Note"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/d_20" />
+
+            </TableRow>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/ln_time_table"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/d_16"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/item_day" />
 
 
-            </LinearLayout>
-        </ScrollView>
+                </LinearLayout>
+            </ScrollView>
 
-        <Button
-            android:id="@+id/bt_edit_table"
-            android:layout_width="100dp"
-            android:layout_height="@dimen/d_50"
-            android:layout_gravity="right"
-            android:layout_marginTop="@dimen/d_10"
-            android:layout_marginRight="@dimen/d_16"
-            android:background="@drawable/bg_edit_bt"
-            android:text="Edit table" />
+            <Button
+                android:id="@+id/bt_edit_table"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/d_50"
+                android:layout_gravity="right"
+                android:layout_marginTop="@dimen/d_10"
+                android:layout_marginRight="@dimen/d_16"
+                android:background="@drawable/bg_edit_bt"
+                android:text="Edit table"
+                android:textColor="@color/colorWhite" />
 
-    </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 </RelativeLayout>
