--- a/app/src/main/res/layout/m006_frg_history.xml
+++ b/app/src/main/res/layout/m006_frg_history.xml
@@ -25,30 +25,36 @@
         <include layout="@layout/actionbar_m006" />
 
         <ImageView
-            android:layout_width="180dp"
-            android:layout_height="60dp"
+            android:layout_width="300dp"
+            android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/d_10"
-            android:src="@drawable/logo" />
+            android:src="@drawable/ic_logo_company" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="the best android training organization " />
+            android:orientation="horizontal">
 
+            <ImageView
+                android:layout_width="@dimen/d_50"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/d_16"
+                android:src="@drawable/ic_class" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="@dimen/d_16"
-            android:layout_marginTop="@dimen/d_16"
-            android:gravity="center"
-            android:text="Danh sách lớp"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/d_30"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/d_16"
+
+                android:gravity="center"
+                android:text="Danh sách lớp"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/d_30"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
