--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#4E4E4E</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorGreen">#6FCDE9</color>
+    <color name="colorGreen">#38C2BB</color>
     <color name="colorGray">#BAECED</color>
     <color name="colorRed">#F44336</color>
     <color name="colorRedAlpha">#F0564B</color>
