--- a/app/src/main/res/layout/item_m006_list_class.xml
+++ b/app/src/main/res/layout/item_m006_list_class.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="100dp"
     android:background="@color/colorWhite"
     android:orientation="vertical"
     android:weightSum="3">
@@ -29,8 +29,8 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorWhite"
                 android:padding="@dimen/d_10"
-                android:src="@drawable/ic_baseline_android"
-                android:tint="@color/colorGreen" />
+                android:src="@drawable/ic_class"
+             />
 
             <TextView
                 android:id="@+id/tv_name_class_m006"
@@ -41,7 +41,7 @@
                 android:gravity="center"
                 android:text="Techja k1"
                 android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_20"
+                android:textSize="@dimen/d_16"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -62,8 +62,8 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorWhite"
                 android:padding="@dimen/d_10"
-                android:src="@drawable/ic_baseline_emoji_emotions"
-                android:tint="@color/colorGreen" />
+                android:src="@drawable/ic_qrcode"
+                 />
 
             <TextView
 
@@ -75,7 +75,7 @@
                 android:gravity="center"
                 android:text="TDNDZ123"
                 android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_20"
+                android:textSize="@dimen/d_16"
                 android:textStyle="bold" />
 
             <View
@@ -86,27 +86,4 @@
         </LinearLayout>
     </TableRow>
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/d_10"
-        android:weightSum="3"
-        android:gravity="center"
-        android:layout_marginBottom="@dimen/d_20">
-
-        <Button
-            android:id="@+id/bt_list_006"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/d_10"
-            android:layout_marginRight="@dimen/d_16"
-            android:layout_weight="1"
-            android:background="@drawable/bg_bt_timetable"
-            android:text="Danh sách lớp"
-            android:textColor="@color/colorWhiteAlpha"
-            android:textSize="@dimen/d_15"
-            android:textStyle="bold" />
-
-
-    </TableRow>
 </LinearLayout>
