--- a/app/src/main/res/layout/m003_frg_menu.xml
+++ b/app/src/main/res/layout/m003_frg_menu.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -18,20 +18,14 @@
             android:orientation="horizontal"
             android:weightSum="4">
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="@dimen/d_16"
-                android:src="@drawable/ic_android_black_24dp"
-                android:tint="@color/colorWhiteAlpha" />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
+                android:layout_weight="4"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/d_20">
 
                 <View
                     android:layout_width="0dp"
@@ -48,15 +42,7 @@
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/iv_signout"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:padding="@dimen/d_16"
-                android:src="@drawable/ic_power"
-                android:tint="@color/colortvLogo" />
+
         </TableRow>
 
         <TableRow
@@ -74,12 +60,12 @@
                 android:padding="@dimen/d40">
 
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="2"
+                    android:id="@+id/iv_class"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_baseline_account"
-                    android:tint="@color/colortvLogo" />
+                    android:layout_weight="2"
+                    android:src="@drawable/ic_lop" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -101,12 +87,11 @@
                 android:padding="@dimen/d40">
 
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_gravity="center"
                     android:layout_weight="5"
-                    android:src="@drawable/ic_baseline_access_time"
-                    android:tint="@color/colortvLogo" />
+                    android:src="@drawable/ic_mc" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -136,12 +121,11 @@
                 android:padding="@dimen/d40">
 
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_gravity="center"
                     android:layout_weight="5"
-                    android:src="@drawable/qr_code"
-                    android:tint="@color/colortvLogo" />
+                    android:src="@drawable/ic_qrcode" />
 
                 <TextView
 
@@ -149,7 +133,36 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="sans-serif"
-                    android:text="Attendance"
+                    android:text="Code"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_item"
+                android:orientation="vertical"
+                android:padding="@dimen/d_30">
+
+                <ImageView
+                    android:id="@+id/iv_signout"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+
+                    android:padding="@dimen/d_16"
+                    android:src="@drawable/logout" />
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="sans-serif"
+                    android:text="Signout"
                     android:textColor="@color/colorBlack"
                     android:textSize="20dp" />
             </LinearLayout>
